--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,16 +81,16 @@ dependencies:
   share_plus: ^7.0.2
   firebase_dynamic_links: ^5.3.2
   firebase_core: ^2.13.1
-  flutter_webview_plugin: ^0.4.0
   flutter_spinkit: ^5.2.0 # 로딩 화면 구현
   socket_io: ^0.9.0+2
   basic_utils: ^5.5.4
+  
 
-# flutter_launcher_icons:
-#   android: "launcher_icon"
-#   ios: true
-#   image_path: "assets/images/img_gooodall_icon.png"
-#   min_sdk_android: 21 # android min sdk min:16, default 21
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true 
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 
 dev_dependencies:
