--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,7 +89,7 @@ dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true 
-  image_path: "assets/images/app_logo.png"
+  image_path: "assets/images/app_logo_r.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 
